# aoc23

./: .gitignore  Cargo.toml
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
day05/: result.txt
day05/src/: main.rs  test.txt
day06/src/: main.rs
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/src/: main.rs
day10/src/: main.rs
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: input.msmtch  input.txt.pathological  input.txt.single  lib.rs  main.rs  scratch.txt
day12/test_dyn_iter/: Cargo.toml
day12/test_dyn_iter/src/: main.rs
day13/: main.rs
day14/: main.rs
day15/: main.rs
day16/: main.rs
day17/: main.bak.rs  main.bak2.rs  main.bak47.rs  main.rs  test3.txt
day18/: main.rs
day19/: main.rs
day20/: main.rs
day21/: main.rs  test1.txt  test2.txt
day22/: main.rs
day23/: main.rs
day24/: main.rs
grid_derive/: Cargo.toml
grid_derive/src/: grid.rs  lib.rs
src/: asdf.txt  lib.rs  main.rs  outnew  outold  test0.txt
