[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day13"
path = "day13/main.rs"

[[bin]]
name = "day14"
path = "day14/main.rs"

[[bin]]
name = "day15"
path = "day15/main.rs"

[[bin]]
name = "day16"
path = "day16/main.rs"

[[bin]]
name = "day17"
path = "day17/main.rs"

[dependencies]
colored = "2.2.0"
