[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true

[[bin]]
name = "day13"
path = "day13/main.rs"

[[bin]]
name = "day14"
path = "day14/main.rs"

[[bin]]
name = "day15"
path = "day15/main.rs"

[[bin]]
name = "day16"
path = "day16/main.rs"

[[bin]]
name = "day17"
path = "day17/main.rs"

[[bin]]
name = "day18"
path = "day18/main.rs"

[[bin]]
name = "day19"
path = "day19/main.rs"

[[bin]]
name = "day20"
path = "day20/main.rs"

[dependencies]
colored = "2.2.0"
env_logger = "0.11.6"
log = "0.4.25"
num = "0.4.3"
rayon = "1.10.0"
